// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchStaticPath should return right data  1`] = `
{
  "fallback": "blocking",
  "paths": [
    {
      "locale": "de",
      "params": {
        "slug": [
          "",
        ],
      },
    },
    {
      "locale": "en",
      "params": {
        "slug": [
          "",
        ],
      },
    },
    {
      "locale": "da",
      "params": {
        "slug": [
          "",
        ],
      },
    },
    {
      "locale": "de",
      "params": {
        "slug": [
          "testpage1",
        ],
      },
    },
    {
      "locale": "en",
      "params": {
        "slug": [
          "testpage1en",
        ],
      },
    },
    {
      "locale": "da",
      "params": {
        "slug": [
          "testpage1da",
        ],
      },
    },
    {
      "locale": "de",
      "params": {
        "slug": [
          "testpagetype",
          "widthsubroute2",
        ],
      },
    },
    {
      "locale": "en",
      "params": {
        "slug": [
          "testpagetype",
          "widthsubroute2en",
        ],
      },
    },
    {
      "locale": "da",
      "params": {
        "slug": [
          "testpagetype",
          "widthsubroute2da",
        ],
      },
    },
    {
      "locale": "de",
      "params": {
        "slug": [
          "capital-testpage3",
        ],
      },
    },
    {
      "locale": "en",
      "params": {
        "slug": [
          "capital-testpage3en",
        ],
      },
    },
    {
      "locale": "da",
      "params": {
        "slug": [
          "capital-testpage3da",
        ],
      },
    },
    {
      "locale": "de",
      "params": {
        "slug": [
          "notransslug",
        ],
      },
    },
    {
      "locale": "en",
      "params": {
        "slug": [
          "notransslug",
        ],
      },
    },
    {
      "locale": "da",
      "params": {
        "slug": [
          "notransslug",
        ],
      },
    },
  ],
}
`;

exports[`fetchStaticPath should return right data no locales  1`] = `
{
  "fallback": "blocking",
  "paths": [
    {
      "params": {
        "slug": [
          "",
        ],
      },
    },
    {
      "params": {
        "slug": [
          "testpage1",
        ],
      },
    },
    {
      "params": {
        "slug": [
          "testpagetype",
          "widthsubroute2",
        ],
      },
    },
    {
      "params": {
        "slug": [
          "capital-testpage3",
        ],
      },
    },
    {
      "params": {
        "slug": [
          "notransslug",
        ],
      },
    },
  ],
}
`;
